# atomic-dict

./: LICENSE  README.md  c_build.py  pyproject.toml
atomic_dict/: __init__.py  capi.pyi  core.py
c/: doc.h  init.c  methods.c  methods.h  types.h
capi/: doc.h  init.c  methods.c
tests/: test_atomic_dict.py
