[tool.poetry]
name = "atomic_dict"
version = "0.1.0"
description = "A library for lock-free shared 64-bit dictionaries"
authors = ["Wesley W. Terpstra <wesley@sifive.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
