[tool.poetry]
name = "atomic_dict"
version = "0.2.0"
description = "A library for lock-free shared 64-bit dictionaries"
license = "BSD-3"
readme = "README.md"
repository = "https://github.com/terpstra/atomic-dict"
build = "c_build.py"
authors = ["Wesley W. Terpstra <wesley@sifive.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
setuptools = "^70.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
