[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = "."
strict = true
warn_unreachable = true

[tool.poetry]
name = "atomic_dict"
version = "0.3.0"
description = "A library for lock-free shared 64-bit dictionaries"
license = "BSD-3"
readme = "README.md"
repository = "https://github.com/terpstra/atomic-dict"
build = "c_build.py"
authors = ["Wesley W. Terpstra <wesley@sifive.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pytest = "^7.1.2"
ruff = "^0.3.5"

[tool.ruff]
src = ["atomic_dict", "tests"]
